vm.tf
resource "azurerm_linux_virtual_machine" "frontend_vm" {
  name                = "frontend-vm"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location

  size = "Standard_A1_v2"

  admin_username = "azureuser"

  network_interface_ids = [
    azurerm_network_interface.frontend_nic.id
  ]

  admin_ssh_key {
  username   = "azureuser"
  public_key =  file("${path.module}/ssh/id_ed25519.pub")
}

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
  publisher = "Canonical"
  offer     = "UbuntuServer"
  sku       = "18.04-LTS"
  version   = "latest"
  }
}

resource "azurerm_linux_virtual_machine" "backend_vm" {
  name                = "backend-vm"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location

  size = "Standard_A1_v2"

  admin_username = "azureuser"

  network_interface_ids = [
    azurerm_network_interface.backend_nic.id
  ]

  admin_ssh_key {
  username   = "azureuser"
  public_key =  file("${path.module}/ssh/id_ed25519.pub")
}

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
  publisher = "Canonical"
  offer     = "UbuntuServer"
  sku       = "18.04-LTS"
  version   = "latest"
  }
}
